--- a/components/component_definition.ipynb
+++ b/components/component_definition.ipynb
@@ -95,6 +95,7 @@
     "    \n",
     "    # process\n",
     "    \n",
+    "    # eliminamos el target para simular la realidad / eliminate target to simulate reality\n",
     "    df = data[['trip_month', 'trip_day', 'trip_day_of_week', 'trip_hour', 'trip_seconds', 'trip_miles', 'payment_type', 'euclidean']]\n",
     "    \n",
     "    df2 = pd.get_dummies(df, columns = ['payment_type'], drop_first = True)\n",
@@ -106,7 +107,7 @@
     "    df2.to_gbq(bq_current_stage_url,\n",
     "               project,\n",
     "               chunksize=None, \n",
-    "               if_exists='replace', # el default tira error, aca queremos que siempre reemplace\n",
+    "               if_exists='replace', # el default tira error, aca queremos que siempre reemplace / default throws error, here we want it to replace always\n",
     "               table_schema=[{'name': 'trip_month','type': 'INTEGER'},\n",
     "                             {'name': 'trip_day','type': 'INTEGER'},\n",
     "                             {'name': 'trip_day_of_week','type': 'INTEGER'},\n",
@@ -114,7 +115,7 @@
     "                             {'name': 'trip_seconds','type': 'INTEGER'},\n",
     "                             {'name': 'trip_miles','type': 'FLOAT'},\n",
     "                             {'name': 'euclidean','type': 'FLOAT'},\n",
-    "                             #{'name': 'target','type': 'INTEGER'}, eliminamos el target para simular la realidad\n",
+    "                             #{'name': 'target','type': 'INTEGER'}, eliminamos el target para simular la realidad / eliminate target to simulate reality\n",
     "                             {'name': 'payment_type_Credit_Card','type': 'INTEGER'},\n",
     "                             {'name': 'payment_type_Dispute','type': 'INTEGER'},\n",
     "                             {'name': 'payment_type_Mobile','type': 'INTEGER'},\n",
@@ -125,7 +126,7 @@
     "    )\n",
     "    \n",
     "    # ponerle a la data tambien un timestamp\n",
-    "    \n",
+    "    # also timestamp the data    \n",
     "    \n",
     "    from datetime import datetime\n",
     "\n",
@@ -135,7 +136,7 @@
     "    \n",
     "    df2.to_csv(DATA_PATH, index = False)\n",
     "    \n",
-    "    gcsclient = storage.Client() # tal vez vaya stage_data_bucket\n",
+    "    gcsclient = storage.Client() \n",
     "    bucket = gcsclient.get_bucket(stage_data_bucket)\n",
     "    \n",
     "    blob_train = bucket.blob(DATA_PATH)\n",
@@ -196,7 +197,7 @@
     "        table\n",
     "    )\n",
     "    data = rows.to_dataframe(\n",
-    "        create_bqstorage_client=True, # guarda acá\n",
+    "        create_bqstorage_client=True, \n",
     "    )\n",
     "    \n",
     "    df = data[['trip_month', 'trip_day', 'trip_day_of_week', 'trip_hour', 'trip_seconds', 'trip_miles', 'payment_type', 'euclidean', 'tip_bin']]\n",
@@ -209,9 +210,8 @@
     "    \n",
     "    df2.to_gbq(bq_historic_stage_url,\n",
     "               project,\n",
-    "               chunksize=None, # I have tried with several chunk sizes, it runs faster when it's one big chunk (at least for me)\n",
-    "               if_exists='replace', # el default tira error, aca no queremos eso\n",
-    "               #verbose=False\n",
+    "               chunksize=None, \n",
+    "               if_exists='replace', # el default tira error, aca queremos que siempre reemplace / default throws error, here we want it to replace always\n",
     "               table_schema=[{'name': 'trip_month','type': 'INTEGER'},\n",
     "                             {'name': 'trip_day','type': 'INTEGER'},\n",
     "                             {'name': 'trip_day_of_week','type': 'INTEGER'},\n",
@@ -275,7 +275,7 @@
     "    bqclient = bigquery.Client(project = project, location = region)\n",
     "    \n",
     "\n",
-    "    # Download tje table.\n",
+    "    # Download the table.\n",
     "    table = bigquery.TableReference.from_string(\n",
     "        bq_source_url\n",
     "    )\n",
@@ -296,7 +296,7 @@
     "    val_data.to_csv(VAL_DATA_PATH)\n",
     "    test.to_csv(TEST_DATA_PATH)\n",
     "    \n",
-    "    ### so far we have the paths, we have to upload them to the bucket / hasta aca están los csvs en los PATH\n",
+    "    ### so far we have the paths, we have to upload them to the bucket / hasta aca están los csvs en los PATH, ahora lo subimos al bucket\n",
     "    gcsclient = storage.Client() \n",
     "    bucket = gcsclient.get_bucket(stage_data_bucket)\n",
     "    \n",
@@ -500,6 +500,9 @@
     "    model_spec: Output[Artifact],\n",
     "    trials: int,\n",
     "    parallel_trials: int,\n",
+    "    rf_hp_image: str,\n",
+    "    lr_hp_image: str,\n",
+    "    hp_train_machine: str,\n",
     "    kpi: Output[Metrics],\n",
     "    model_name: Output[Metrics] \n",
     "): \n",
@@ -516,8 +519,8 @@
     "                    location = region)\n",
     "    \n",
     "    # train images definition\n",
-    "    RF_HP_IMAGE = \"gcr.io/vertex-testing-327520/rf_hp_job:v1\"\n",
-    "    LR_HP_IMAGE = \"gcr.io/vertex-testing-327520/lr_hp_job:v1\"\n",
+    "    RF_HP_IMAGE = rf_hp_image\n",
+    "    LR_HP_IMAGE = lr_hp_image\n",
     "    \n",
     "    # get model name\n",
     "    model_dict = winning_model_name.metadata\n",
@@ -537,7 +540,7 @@
     "    \n",
     "    worker_pool_specs = [{\n",
     "    \"machine_spec\": {\n",
-    "        \"machine_type\": \"n1-standard-8\",\n",
+    "        \"machine_type\": hp_train_machine,\n",
     "        #\"accelerator_type\": \"NVIDIA_TESLA_T4\",\n",
     "        #\"accelerator_count\": 1\n",
     "    },\n",
