--- a/pipeline_setup.ipynb
+++ b/pipeline_setup.ipynb
@@ -9,8 +9,85 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ffbc99a1-a00e-4419-9f99-526b69d5c5ae",
+   "metadata": {},
+   "source": [
+    "En esta notebook se configura todo lo necesario para la ejecución del pipeline."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "abcc9a37-498d-4368-821d-987bc38aba4d",
+   "metadata": {},
+   "source": [
+    "In this notebook we configure everything we need to run the pipeline."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b83182f7-b8e4-4d82-84f8-1541305f97e9",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## Install libraries - Paquetes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "97ad07f0-98b4-49a7-b128-4658df6bbf7b",
+   "metadata": {},
+   "source": [
+    "Se ofrecen dos versiones un archivo de texto con las librerías: una con las instalaciones realizadas de manera directa (*requirements.txt*) y una que tiene la totalidad del entorno con el que se realizó este pipeline (*full_requirements.txt*)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9f389360-a865-4af2-8b42-c52407757805",
+   "metadata": {},
+   "source": [
+    "We present two requirement text files: one with the critical imports needed (*requirements.txt*) and another with the entirety of the environment with which the pipeline was run (*full_requirements.txt*)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "288598db-64d6-49cd-a956-a593d9db6ae2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "google-cloud-pipeline-components==0.2.0\n",
+      "kfp==1.8.9\n",
+      "scikit-learn==1.0.0\n",
+      "google-cloud-bigquery\n",
+      "google-cloud-bigquery-storage\n",
+      "google-cloud-aiplatform\n",
+      "pandas\n",
+      "numpy"
+     ]
+    }
+   ],
+   "source": [
+    "!cat requirements.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf1748bf-7332-45be-869d-bf315a35bfd3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#!pip install -r requirements.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "id": "9c86100e-0e9e-4338-989d-0f229e4ebe80",
    "metadata": {},
    "outputs": [
@@ -65,7 +142,6 @@
    "cell_type": "markdown",
    "id": "d874cf39-cc2c-4767-a5c9-475a0d644a92",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -480,7 +556,9 @@
   {
    "cell_type": "markdown",
    "id": "93e5be86-b757-4feb-b937-8d087536d394",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## Cloud Storage - Artifacts"
    ]
@@ -585,9 +663,344 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "58c4da4b-b33f-425d-89cf-828bb1384ce5",
+   "metadata": {},
+   "source": [
+    "## Container Registry - Hyperparameter tuning jobs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "516c647c-4d2d-4142-a05d-90adff9bdf35",
+   "metadata": {},
+   "source": [
+    "Para realizar un job de tuneo de hiperparámetros, la forma más conveniente es mediante el uso de imágenes de Docker. Se ofrecen dos configuraciones para algoritmos: Random Forest y regresión logística."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5b0cb3d6-f653-4c4a-9587-78f5ab4f6d5f",
+   "metadata": {},
+   "source": [
+    "To perform a hyperparameter tuning job, the most convenient way is through the use of Docker images. There are two algorithm configurations: Random Forest and logistic regression."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ffabf7ab-21a5-4c39-9c86-12480aa66dd9",
+   "metadata": {},
+   "source": [
+    "#### General structure"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "080af8de-a682-4d27-b478-0cd8845b254a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[01;34mhp_lr\u001b[00m\n",
+      "├── Dockerfile\n",
+      "└── \u001b[01;34mtrainer\u001b[00m\n",
+      "    └── task.py\n",
+      "\n",
+      "1 directory, 2 files\n"
+     ]
+    }
+   ],
+   "source": [
+    "!tree hp_lr"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0f227501-3723-4eea-8abf-b164fa23f5c5",
+   "metadata": {},
+   "source": [
+    "#### Dockerfile"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "87afdb17-a474-4651-a336-e8e26baf3b38",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "from gcr.io/deeplearning-platform-release/sklearn-cpu\n",
+      "\n",
+      "WORKDIR /\n",
+      "\n",
+      "# Installs hypertune library\n",
+      "RUN pip install cloudml-hypertune sklearn scipy google-cloud-bigquery joblib pandas google-cloud-storage\n",
+      "\n",
+      "# Copies the trainer code to the docker image.\n",
+      "COPY trainer /trainer\n",
+      "\n",
+      "# Sets up the entry point to invoke the trainer.\n",
+      "ENTRYPOINT [\"python\", \"-m\", \"trainer.task\"]"
+     ]
+    }
+   ],
+   "source": [
+    "cat hp_lr/Dockerfile"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8c8902a9-96d1-4b24-81c9-88490bb6fca5",
+   "metadata": {},
+   "source": [
+    "#### Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "6f4de654-b1f7-40f2-8dc0-7bcae1e5267b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "from sklearn.metrics import roc_curve, confusion_matrix, accuracy_score, f1_score\n",
+      "from sklearn.model_selection import train_test_split\n",
+      "from google.cloud import bigquery#\n",
+      "from google.cloud import storage\n",
+      "from joblib import dump\n",
+      "\n",
+      "import os\n",
+      "import pandas as pd\n",
+      "\n",
+      "#from xgboost import XGBClassifier\n",
+      "#from sklearn.ensemble import RandomForestClassifier\n",
+      "from sklearn.linear_model import LogisticRegression\n",
+      "\n",
+      "import argparse\n",
+      "import hypertune\n",
+      "from sklearn.model_selection import train_test_split as tts\n",
+      "\n",
+      "\n",
+      "\n",
+      "STAGE_DATA_BUCKET = 'chicago_taxi_stage'\n",
+      "TRAIN_DATA_PATH = 'chicago_taxi_train.csv'\n",
+      "\n",
+      "cols = ['trip_month', 'trip_day', 'trip_day_of_week',\n",
+      "       'trip_hour', 'trip_seconds', 'trip_miles', 'euclidean', 'target',\n",
+      "       'payment_type_Credit_Card', 'payment_type_Dispute', 'payment_type_Mobile',\n",
+      "       'payment_type_No_Charge', 'payment_type_Prcard', 'payment_type_Unknown']\n",
+      "\n",
+      "def get_args():\n",
+      "    '''Parses args. Must include all hyperparameters you want to tune.'''\n",
+      "    parser = argparse.ArgumentParser()\n",
+      "    parser.add_argument(\n",
+      "      '--penalty',\n",
+      "      required=True,\n",
+      "      type=str,\n",
+      "      help='Penalty')\n",
+      "    parser.add_argument(\n",
+      "      '--C',\n",
+      "      required=True,\n",
+      "      type=float,\n",
+      "      help='Inverse of regularization')\n",
+      "    parser.add_argument(\n",
+      "      '--solver',\n",
+      "      required=True,\n",
+      "      type=str,\n",
+      "      help='Solver')\n",
+      "    args = parser.parse_args()\n",
+      "    return args\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "def create_dataset():\n",
+      "    \n",
+      "    bqclient = bigquery.Client()\n",
+      "    storage_client = storage.Client()\n",
+      "\n",
+      "    gcsclient = storage.Client() # tal vez vaya stage_data_bucket\n",
+      "    bucket = gcsclient.get_bucket(STAGE_DATA_BUCKET)\n",
+      "    blob = bucket.blob(TRAIN_DATA_PATH)\n",
+      "    blob.download_to_filename(TRAIN_DATA_PATH)\n",
+      "\n",
+      "    data = pd.read_csv(TRAIN_DATA_PATH, usecols=cols)\n",
+      "    # Si estas usando volumenes muy grnades de datos, usa un sample \n",
+      "    # If you're dealing with really big data, use a sample data = data.sample(frac = 0.2, random_state = 42)\n",
+      "    train_data, validation_data = tts(data, test_size=0.3)\n",
+      "    return train_data, validation_data\n",
+      "\n",
+      "def split_data_and_labels(data):\n",
+      "    y = data.pop('target')\n",
+      "    return data, y\n",
+      "\n",
+      "    \n",
+      "\n",
+      "def create_model(penalty, C, solver):\n",
+      "    model = LogisticRegression(\n",
+      "        penalty = penalty,\n",
+      "        C = C,\n",
+      "        solver = solver\n",
+      "    )\n",
+      "    \n",
+      "    return model\n",
+      "\n",
+      "def main():\n",
+      "    args = get_args()\n",
+      "    \n",
+      "    train_data, validation_data = create_dataset()\n",
+      "    x_train, y_train = split_data_and_labels(train_data)\n",
+      "    x_test, y_test = split_data_and_labels(validation_data)\n",
+      "    \n",
+      "    model = create_model(args.penalty, args.C, args.solver)\n",
+      "    model = model.fit(x_train, y_train)\n",
+      "    \n",
+      "    y_pred = model.predict(x_test)\n",
+      "    f1_value = f1_score(y_test, y_pred)\n",
+      "    \n",
+      "    hpt = hypertune.HyperTune()\n",
+      "    hpt.report_hyperparameter_tuning_metric(\n",
+      "        hyperparameter_metric_tag='f1_score',\n",
+      "        metric_value=f1_value\n",
+      "    )\n",
+      "\n",
+      "\n",
+      "if __name__ == \"__main__\":\n",
+      "    main()\n"
+     ]
+    }
+   ],
+   "source": [
+    "cat hp_lr/trainer/task.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cbe4ce80-1aa6-490b-9947-c5aa7fba7264",
+   "metadata": {},
+   "source": [
+    "- Se pasan los hiperparametros a iterar como argumentos (argparser).\n",
+    "- Se selecciona la metrica (f1_score) y el objetivo (maximizar)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "55a68875-0a8f-4687-a6e5-343d7304074f",
+   "metadata": {},
+   "source": [
+    "- Pass the hyperparameters to iterate as arguments (argparser).\n",
+    "- Choose metrics (f1_score) and goal (maximize)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f005446b-7a18-4fde-a831-0d1029d2eb8c",
+   "metadata": {},
+   "source": [
+    "#### Image: build and push"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "24350634-2f6a-4870-afbb-9c9538e644cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'gcr.io/vertex-testing-327520/rf_hp_job:v1'"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "RANDOM_FOREST_IMAGE = f'gcr.io/{PROJECT_ID}/rf_hp_job:v1'\n",
+    "RANDOM_FOREST_IMAGE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "2804df14-270c-4e7c-9b17-eb3bdad608a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'gcr.io/vertex-testing-327520/lr_hp_job:v1'"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "LOG_REG_IMAGE = f'gcr.io/{PROJECT_ID}/lr_hp_job:v1'\n",
+    "LOG_REG_IMAGE"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25151e6a-5d15-4d0a-b1dd-11e83c4b2e96",
+   "id": "d2594c50-7f1b-4006-9361-aa9ea75bc096",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#!docker build ./hp_rf -t $RANDOM_FOREST_IMAGE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "92b8bf14-0847-4ff9-ae21-d7dd32aa07dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sending build context to Docker daemon  11.78kB\n",
+      "Step 1/5 : from gcr.io/deeplearning-platform-release/sklearn-cpu\n",
+      " ---> 10212f0d9fdb\n",
+      "Step 2/5 : WORKDIR /\n",
+      " ---> Using cache\n",
+      " ---> 18c44e6bd349\n",
+      "Step 3/5 : RUN pip install cloudml-hypertune sklearn scipy google-cloud-bigquery joblib pandas google-cloud-storage\n",
+      " ---> Using cache\n",
+      " ---> 4a0dc94a9615\n",
+      "Step 4/5 : COPY trainer /trainer\n",
+      " ---> 83e9c94cc5fc\n",
+      "Step 5/5 : ENTRYPOINT [\"python\", \"-m\", \"trainer.task\"]\n",
+      " ---> Running in 1d68bc68e79d\n",
+      "Removing intermediate container 1d68bc68e79d\n",
+      " ---> 50944b114c83\n",
+      "Successfully built 50944b114c83\n",
+      "Successfully tagged gcr.io/vertex-testing-327520/rf_hp_job:test\n"
+     ]
+    }
+   ],
+   "source": [
+    "#!docker build ./hp_lr -t $LOG_REG_IMAGE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f6ddf581-dfc3-40df-886a-436a594288c9",
    "metadata": {},
    "outputs": [],
    "source": []
