--- a/pipeline_run.ipynb
+++ b/pipeline_run.ipynb
@@ -92,12 +92,15 @@
     "\n",
     "# configuracion de intentos de tuneo de hiperparametros\n",
     "# configuration of hp tuning job trials\n",
+    "RF_HP_IMAGE = f'gcr.io/{PROJECT_ID}/rf_hp_job:v1'\n",
+    "LR_HP_IMAGE = f'gcr.io/{PROJECT_ID}/lr_hp_job:v1'\n",
+    "HP_TRAIN_MACHINE = \"n1-standard-8\"\n",
     "HP_TRIALS = 10\n",
     "PARALLEL_TRIALS = 3\n",
     "\n",
     "# umbral de aceptabilidad para prediccion batch\n",
     "# acceptability threshold for batch prediction\n",
-    "THRESHOLD = 0.8\n",
+    "THRESHOLD = 0.7\n",
     "\n",
     "# habilitar cache en el pipeline para ahorrar costos\n",
     "# enable cache in pipeline execution to prevent costs\n",
@@ -317,6 +320,9 @@
     "    machine_type: str = MACHINE_TYPE,\n",
     "    trials: int = HP_TRIALS,\n",
     "    parallel_trials: int = PARALLEL_TRIALS,\n",
+    "    rf_hp_image: str = RF_HP_IMAGE,\n",
+    "    lr_hp_image: str = LR_HP_IMAGE,\n",
+    "    hp_train_machine: str = HP_TRAIN_MACHINE,\n",
     "    bq_current_raw_url: str = BQ_CURRENT_RAW_URL,\n",
     "    bq_current_stage_url: str = BQ_CURRENT_STAGE_URL,\n",
     "    bq_historic_raw_url: str = BQ_HISTORIC_RAW_URL,\n",
@@ -371,7 +377,10 @@
     "        stage_data_bucket = stage_data_bucket,\n",
     "        winning_model_name = model_selection.outputs['winning_model_name'],\n",
     "        trials = trials,\n",
-    "        parallel_trials = parallel_trials\n",
+    "        parallel_trials = parallel_trials,\n",
+    "        rf_hp_image = rf_hp_image,\n",
+    "        lr_hp_image = lr_hp_image,\n",
+    "        hp_train_machine = hp_train_machine\n",
     "    )\n",
     "    \n",
     "    best_model = train_best_model_op(\n",
